[gd_scene load_steps=9 format=2]

[ext_resource path="res://PlayShadMat.material" type="Material" id=1]
[ext_resource path="res://SuperScript.gd" type="Script" id=2]
[ext_resource path="res://SpinShape.gd" type="Script" id=3]
[ext_resource path="res://addons/goutte.camera.trackball/trackball_camera.gd" type="Script" id=4]
[ext_resource path="res://ball.obj" type="ArrayMesh" id=5]
[ext_resource path="res://btnScreen.gd" type="Script" id=6]

[sub_resource type="SphereShape" id=2]

[sub_resource type="Environment" id=3]
background_mode = 1
auto_exposure_scale = 0.15
auto_exposure_max_luma = 3.0
auto_exposure_speed = 2.33
ssao_radius = 5.87
ssao_intensity = 6.42
ssao_quality = 2
glow_enabled = true
glow_bloom = 0.02
glow_blend_mode = 0
glow_hdr_luminance_cap = 13.0
glow_bicubic_upscale = true
glow_high_quality = true

[node name="Root" type="Spatial"]

[node name="Shape" type="Spatial" parent="."]

[node name="KinematicBody" type="KinematicBody" parent="Shape"]
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Shape/KinematicBody"]
mesh = ExtResource( 5 )
material/0 = ExtResource( 1 )
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Shape/KinematicBody"]
shape = SubResource( 2 )

[node name="TrackballCamera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.95489 )
environment = SubResource( 3 )
script = ExtResource( 4 )
zoom_minimum = 1
action_zoom_in = "zoom_in"
action_zoom_out = "zoom_out"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WindowDialog" type="WindowDialog" parent="CanvasLayer"]
visible = true
margin_left = 101.0
margin_top = 45.0
margin_right = 368.0
margin_bottom = 646.0
window_title = "Controls"
resizable = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/WindowDialog"]
margin_left = 5.0
margin_right = 263.0
margin_bottom = 602.0

[node name="BtnReset" type="Button" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_right = 258.0
margin_bottom = 20.0
text = "Reset"

[node name="M1Label" type="Label" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 24.0
margin_right = 258.0
margin_bottom = 38.0
text = "M1: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="M1Slider" type="HSlider" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 42.0
margin_right = 258.0
margin_bottom = 58.0
min_value = -100.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N1Label" type="Label" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 62.0
margin_right = 258.0
margin_bottom = 76.0
text = "N 1 1:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N11Slider" type="HSlider" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 80.0
margin_right = 258.0
margin_bottom = 96.0
min_value = -100.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N1Label2" type="Label" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 100.0
margin_right = 258.0
margin_bottom = 114.0
text = "N 1 2:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N12Slider" type="HSlider" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 118.0
margin_right = 258.0
margin_bottom = 134.0
min_value = -100.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N1Label3" type="Label" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 138.0
margin_right = 258.0
margin_bottom = 152.0
text = "N1 3:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N13Slider" type="HSlider" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 156.0
margin_right = 258.0
margin_bottom = 172.0
min_value = -100.0
step = 0.1

[node name="A1Label" type="Label" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 176.0
margin_right = 258.0
margin_bottom = 190.0
text = "A1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A1Slider" type="HSlider" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 194.0
margin_right = 258.0
margin_bottom = 210.0
min_value = -100.0
step = 0.1

[node name="B1Label" type="Label" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 214.0
margin_right = 258.0
margin_bottom = 228.0
text = "B1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B1Slider" type="HSlider" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 232.0
margin_right = 258.0
margin_bottom = 248.0
min_value = -100.0
step = 0.1

[node name="M2Label" type="Label" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 252.0
margin_right = 258.0
margin_bottom = 266.0
text = "M2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="M2Slider" type="HSlider" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 270.0
margin_right = 258.0
margin_bottom = 286.0
min_value = -100.0
step = 0.1

[node name="N21Label" type="Label" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 290.0
margin_right = 258.0
margin_bottom = 304.0
text = "N 2 1:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N21Slider" type="HSlider" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 308.0
margin_right = 258.0
margin_bottom = 324.0
min_value = -100.0
step = 0.1

[node name="N22Label" type="Label" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 328.0
margin_right = 258.0
margin_bottom = 342.0
text = "N 2 2:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N22Slider" type="HSlider" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 346.0
margin_right = 258.0
margin_bottom = 362.0
min_value = -100.0
step = 0.1

[node name="N23Label" type="Label" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 366.0
margin_right = 258.0
margin_bottom = 380.0
text = "N 2 3:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N23Slider" type="HSlider" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 384.0
margin_right = 258.0
margin_bottom = 400.0
min_value = -100.0
step = 0.1

[node name="A2Label" type="Label" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 404.0
margin_right = 258.0
margin_bottom = 418.0
text = "A2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A2Slider" type="HSlider" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 422.0
margin_right = 258.0
margin_bottom = 438.0
min_value = -100.0
step = 0.1

[node name="B2Label" type="Label" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 442.0
margin_right = 258.0
margin_bottom = 456.0
text = "B2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B2Slider" type="HSlider" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 460.0
margin_right = 258.0
margin_bottom = 476.0
min_value = -100.0
step = 0.1

[node name="btnToggleBloom" type="CheckButton" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 480.0
margin_right = 258.0
margin_bottom = 520.0
text = "Toggle Bloom"

[node name="btnToggleIncrement" type="CheckButton" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 524.0
margin_right = 258.0
margin_bottom = 564.0
text = "Increment 1.0"

[node name="btnScreen" type="Button" parent="CanvasLayer/WindowDialog/VBoxContainer"]
margin_top = 568.0
margin_right = 258.0
margin_bottom = 588.0
text = "Save Screenshot"
script = ExtResource( 6 )

[node name="ButtonToggleControls" type="Button" parent="CanvasLayer"]
margin_left = 11.0
margin_top = 15.0
margin_right = 85.0
margin_bottom = 35.0
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/WindowDialog/VBoxContainer/BtnReset" to="Shape/KinematicBody/MeshInstance" method="_on_BtnReset_pressed"]
[connection signal="value_changed" from="CanvasLayer/WindowDialog/VBoxContainer/M1Slider" to="Shape/KinematicBody/MeshInstance" method="_on_M1Slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/WindowDialog/VBoxContainer/N11Slider" to="Shape/KinematicBody/MeshInstance" method="_on_N11Slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/WindowDialog/VBoxContainer/N12Slider" to="Shape/KinematicBody/MeshInstance" method="_on_N12Slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/WindowDialog/VBoxContainer/N13Slider" to="Shape/KinematicBody/MeshInstance" method="_on_N13Slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/WindowDialog/VBoxContainer/A1Slider" to="Shape/KinematicBody/MeshInstance" method="_on_A1Slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/WindowDialog/VBoxContainer/B1Slider" to="Shape/KinematicBody/MeshInstance" method="_on_B1Slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/WindowDialog/VBoxContainer/M2Slider" to="Shape/KinematicBody/MeshInstance" method="_on_M2Slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/WindowDialog/VBoxContainer/N21Slider" to="Shape/KinematicBody/MeshInstance" method="_on_N21Slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/WindowDialog/VBoxContainer/N22Slider" to="Shape/KinematicBody/MeshInstance" method="_on_N22Slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/WindowDialog/VBoxContainer/N23Slider" to="Shape/KinematicBody/MeshInstance" method="_on_N23Slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/WindowDialog/VBoxContainer/A2Slider" to="Shape/KinematicBody/MeshInstance" method="_on_A2Slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/WindowDialog/VBoxContainer/B2Slider" to="Shape/KinematicBody/MeshInstance" method="_on_B2Slider_value_changed"]
[connection signal="toggled" from="CanvasLayer/WindowDialog/VBoxContainer/btnToggleBloom" to="Shape/KinematicBody/MeshInstance" method="_on_btnToggleBloom_toggled"]
[connection signal="toggled" from="CanvasLayer/WindowDialog/VBoxContainer/btnToggleIncrement" to="Shape/KinematicBody/MeshInstance" method="_on_btnToggleIncrement_toggled"]
[connection signal="pressed" from="CanvasLayer/WindowDialog/VBoxContainer/btnScreen" to="CanvasLayer/WindowDialog/VBoxContainer/btnScreen" method="_on_btnScreen_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonToggleControls" to="Shape/KinematicBody/MeshInstance" method="_on_ButtonToggleControls_pressed"]
